--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,21 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+
+section#redes-sociais {
+    text-align: right;
+}
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.404);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 1px solid rgba(110, 98, 98, 0.644);
+    transform: translate(-2px, -2px);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.61);
+    transition: transform 0.3s;
+}
